# GarbageCollectors

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  clean.bat  clean.sh  cleanBuild.bat  linux_patch.sh  run_app.bat  run_app.sh  windows_patch.bat
application/: main.cpp
application/include/: models.hpp
application/src/: GCDisplay.py  GCFactory.hpp  GCInvokeDisplaySingleton.hpp  GCObserver.hpp  GCVisualizer.hpp  GCWrapObject.hpp  GarbageCollector.hpp  HeapObserver.hpp  HeapVisualizer.hpp  MemoryManagement.cpp  MemoryManagement.hpp
tests/: testGarbageCollector.cpp
